# minimalist_compliance_control

./: .gitignore  AGENT.md  AGENTS.md  README.md  README_IMPL_DIFF_SUMMARY.txt  controller.py  pyproject.toml
config/: arx.gin  g1.gin  leap.gin  leaphand.gin  toddlerbot.gin  toddlerbot_dp.gin  toddlerbot_model_based.gin  toddlerbot_vlm.gin
descriptions/: default.yml
diffusion_policy/: README.md  compliance_dp.py
examples/: compliance.py  compliance_dp.py  compliance_model_based.py  compliance_model_based_leap.py  compliance_model_based_toddlerbot.py  compliance_vlm.py  model_based_shared.py  plot_log_data.py  real_world.py  real_world_g1.py  run_affordance_prediction.py  run_compliance.py  run_compliance_dp.py  run_compliance_vlm.py  run_leap_compliance.py  run_leap_model_based.py  run_policy.py  run_toddlerbot_compliance.py  run_toddlerbot_model_based.py  sim.py
hybrid_servo/: README.md  utils.py
minimalist_compliance_control/: __init__.py  compliance_ref.py  controller.py  ik_solvers.py  real_world.py  sim.py  utils.py  visualization.py  wrench_estimation.py  wrench_sim.py
minimalist_compliance_control.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
minimum_compliance/: __init__.py
model_based/: README.md  keyboard_control_ball.py  zmq_control.py
policy/: compliance.py  compliance_model_based.py  compliance_model_based_leap.py  compliance_model_based_toddlerbot.py  compliance_vlm.py  plot_log_data.py  run_policy.py
real_world/: IMU.py  README.md  arx5_controller.py  calibrate_zero.py  calibration.pkl  camera.py  camera.yml  (+4 more)
(+215 files in other folders)
